# dbbrowser_nvim

./: .browser.toml  Cargo.toml  README.md  test.sqlite
src/: config.rs  lib.rs  main.rs  ui.rs
src/browsers/: mod.rs  postgres.rs  sqlite.rs
tests/: test_config.rs  test_sqlite_browser.rs
