[package]
name = "dbbrowser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
lazy_static = "1.4.0"
nvim-oxi = {version="0.4.1", features=["neovim-0-9"]}
postgres = "0.19.7"
serde = { version = "1.0.195", features = ["derive"] }
sqlite = "0.32.0"
tabled = "0.15.0"
toml = "0.8.8"
